# zplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: threadsafe_queue.hpp  videodecoder.hpp
src/: main.cpp  videodecoder.cpp
